improved logging